2.25.4

  [Jörg Frings-Fürst]
  * Add upstream Rev. 2794:
    + Fix for empty agent_choose_territories value
  * Add upstraem Rev. 2495:
    + Added more debug and '8days' date option
  * Add upstream Rev. 2496:
    + Some report changes.
  * Remove useless *.orig files
  * Add upstream Rev. 2497:
    + Added vicidial_campaign_hour_counts and vicidial_carrier_hour_counts rolling
  * Add upstream Rev. 2498:
    + Added AST_agent_wait_check.pl script to send out emails if there are agents
      waiting more than X seconds.
  * Add upstream Rev. 2499:
    + Correct some typos.
  * Add EU_DOT_24HR.

2.25.3

  [ Jörg Frings-Fürst ]
  * Bugfix: Label "Billing Group"
  * Bugfix: Pausecode
  * Remove *.orig files
  * Bugfix: sql statement InGroups custom_XX fields
  * Bugfix: typos at install.pl and convert2pl.php
  * Bugfix: typo at upgrade_2.14.sql
  * Release 2.25.3 2017-07-17

2.25.2

  [ Jörg Frings-Fürst ]
  * Add Flyingpenguin Version to install.pl
  * Add upstream Rev. 2787:
    + Added logging and notification of 3-way call hung up in agent screen.
  * Add fields custom_one ... _five to table vicidial_inbound_groups and
    into admin.php.
  * Add upstream Rev. 2788:
    + Log webform click
  * Add upstream Rev. 2789:
    + Added Audit Comments display
  * Add upstream Rev. 2790:
    + Fixed help documentation for delay seconds, issue #1025
  * Add upstream Rev. 2791:
    + Added screen colors and fixed default date variable
  * Bugfix MOH Frame file listing (issue #1028)
  * Add upstream Rev. 2792:
    + Changed agents view to use last_state_change for time.
  * Add pause_code to vicidial_agent_log
  * Don't add upstream Rev. 2793 (issue #1028)
  * Release 2.25.2 2017-07-17