@@ -16,6 +16,7 @@
   * Add upstream Rev. 2499:
     + Correct some typos.
   * Add EU_DOT_24HR.
+  * Add vicidial.php to display changelog
 
 2.25.3
 
